--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,12 +22,10 @@
 		<div class="col-sm-6" style="padding-left: 0px; padding-right: 35px; text-align: right;">
 			<p class="footer__copyright">
 				<small class="footer__text">
-					Copyright © 1999-2022
+					Copyright © 1999-2023
 					Member of the
 					<a href="http://www.obofoundry.org/"  class="footer__link" rel="external" title="Open Biological Ontologies" target="blank">Open Biological Ontologies Foundry</a>
-					The Gene Ontology Consortium is supported by a P41 grant from the National Human Genome Research Institute (NHGRI) [grant
-					<a href="https://projectreporter.nih.gov/project_info_details.cfm?aid=9209989" rel="external" title="National Human Genome Research Institute grant 2U41HG002273-17" class="footer__link" target="blank">
-						U41 HG002273</a>]
+				The GO Consortium is funded by the National Human Genome Research Institute (US National Institutes of Health), grant number [HG012212](https://reporter.nih.gov/search/BqfmFvQGv0CWrEFOkzTp-w/project-details/10348001){:target="blank"}, with co-funding by NIGMS.
 				</small>
 			</p>
 		</div>
