--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 	<hr style="margin:8px; padding:0px">
 
 	<div >
-		<div class="col-sm-6" style="padding-left: 45px; text-align: left;">
+		<div class="col-sm-4" style="padding-left: 45px; text-align: left;">
 			<div class="footer__navigation">
 				<ul class="footer__list" style="padding-left: 0px;">
 					<li class="footer__item">
@@ -18,8 +18,14 @@
 				</ul>
 			</div>
 		</div>
-
-		<div class="col-sm-6" style="padding-left: 0px; padding-right: 35px; text-align: right;">
+		<div class="col-sm-3" style="padding-right: 45px; text-align: right;">
+			<div class="footer__logo-list">
+				<a href="https://globalbiodata.org/scientific-activities/global-core-biodata-resources/" target="blank" alt="Global Core Biodata Resource" >
+					<img src="/assets/GCBR-Logo-RGB.png" alt="Global Core Biodata Resource" style="height: 74px; margin-right: 10px;"/>
+                		</a>
+			</div>	
+		</div>	
+		<div class="col-sm-5" style="padding-left: 0px; padding-right: 35px; text-align: right;">
 			<p class="footer__copyright">
 				<small class="footer__text">
 					Copyright © 1999-2023
