--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
 		<div class="col-sm-3" style="padding-right: 45px; text-align: right;">
 			<div class="footer__logo-list">
 				<a href="https://globalbiodata.org/scientific-activities/global-core-biodata-resources/" target="blank" alt="Global Core Biodata Resource" >
-					<img src="/assets/GCBR-Logo-RGB.png" alt="Global Core Biodata Resource" style="height: 74px; margin-right: 10px;"/>
+					<img src="/assets/GCBR-Logo-White.png" alt="Global Core Biodata Resource" style="height: 60px; margin-right: 10px;"/>
                 		</a>
 			</div>	
 		</div>	
