--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 	<hr style="margin:8px; padding:0px">
 
 	<div >
-		<div class="col-sm-4" style="padding-left: 45px; text-align: left;">
+		<div class="col-sm-5" style="padding-left: 45px; text-align: left;">
 			<div class="footer__navigation">
 				<ul class="footer__list" style="padding-left: 0px;">
 					<li class="footer__item">
@@ -18,10 +18,10 @@
 				</ul>
 			</div>
 		</div>
-		<div class="col-sm-3" style="padding-right: 45px; text-align: right;">
+		<div class="col-sm-2" style="padding-left: 45px; padding-right: 45px; text-align: center;">
 			<div class="footer__logo-list">
 				<a href="https://globalbiodata.org/scientific-activities/global-core-biodata-resources" target="blank" alt="Global Core Biodata Resource" >
-					<img src="/assets/GCBR-Logo-White.png" alt="Global Core Biodata Resource" style="height: 60px; margin-right: 10px;"/>
+					<img src="/assets/GCBR-Logo-White.png" alt="Global Core Biodata Resource" style="height: 60px;"/>
                 		</a>
 			</div>	
 		</div>	
