--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
 					Copyright © 1999-2023
 					Member of the
 					<a href="http://www.obofoundry.org/"  class="footer__link" rel="external" title="Open Biological Ontologies" target="blank">Open Biological Ontologies Foundry</a>
-				The GO Consortium is funded by the National Human Genome Research Institute (US National Institutes of Health), grant number <a href="https://reporter.nih.gov/search/BqfmFvQGv0CWrEFOkzTp-w/project-details/10348001 class="footer__link" rel="external" title="HG012212]"target="blank">HG012212</a>, with co-funding by NIGMS.
+				The GO Consortium is funded by the National Human Genome Research Institute (US National Institutes of Health), grant number <a href="https://reporter.nih.gov/search/BqfmFvQGv0CWrEFOkzTp-w/project-details/10348001" class="footer__link" rel="external" title="HG012212"target="blank">HG012212</a>, with co-funding by NIGMS.
 				</small>
 			</p>
 		</div>
