switch to ga4 and new property; for geneontology/operations#65

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-<!-- Google Analytics: Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-440742-2"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JDGZQ3MNS1"></script>
 <script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag() { dataLayer.push(arguments); }
-	gtag('js', new Date());
-	gtag('config', 'UA-440742-2');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JDGZQ3MNS1');
 </script>
 
 {% include head.html %}
@@ -24,7 +25,7 @@
 
     {% include footer.html %}
     {% include js_files.html %}
-    
+
 </body>
 
 </html>
