try and update some of the URLs to HTTPS; progress on geneontology/go-site#53

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
 						<a href="/" class="footer__link link-extended" style="color: white !important;">Home</a>
 					</li>
 					<li class="footer__item">
-						<a href="http://help.geneontology.org" class="footer__link link-extended" style="color: white !important;" target="blank">Contact us</a>
+						<a href="https://help.geneontology.org" class="footer__link link-extended" style="color: white !important;" target="blank">Contact us</a>
 					</li>
 					<li class="footer__item">
 						<a href="/docs/go-citation-policy/" class="footer__link link-extended" style="color: white !important;">Citation and Terms of Use</a>
@@ -23,14 +23,14 @@
 				<a href="https://globalbiodata.org/scientific-activities/global-core-biodata-resources" target="blank" alt="Global Core Biodata Resource" >
 					<img src="/assets/GCBR-Logo-White.png" alt="Global Core Biodata Resource" style="height: 60px;"/>
                 		</a>
-			</div>	
-		</div>	
+			</div>
+		</div>
 		<div class="col-sm-5" style="padding-left: 0px; padding-right: 35px; text-align: right;">
 			<p class="footer__copyright">
 				<small class="footer__text">
 					Copyright © 1999-2023
 					Member of the
-					<a href="http://www.obofoundry.org/"  class="footer__link" rel="external" title="Open Biological Ontologies" target="blank">Open Biological Ontologies Foundry</a>
+					<a href="https://obofoundry.org/"  class="footer__link" rel="external" title="Open Biological Ontologies" target="blank">Open Biological Ontologies Foundry</a>
 				The GO Consortium is funded by the National Human Genome Research Institute (US National Institutes of Health), grant number <a href="https://reporter.nih.gov/search/BqfmFvQGv0CWrEFOkzTp-w/project-details/10348001" class="footer__link" rel="external" title="HG012212"target="blank">HG012212</a>, with co-funding by NIGMS.
 				</small>
 			</p>
