--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -17,7 +17,7 @@
         </div>
 
         <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">    
+            <ul class="nav navbar-nav">
 
 
                 {% for doc in site.data.docs %}
@@ -39,16 +39,16 @@
                         <a href="/search.html" title="Search GO Documentation"   class="dropdown-menu__item__link">
                             <i class="fa fa-search"></i>
                             &nbsp; Search Documentation</a>
-    
+
                         <a href="{{ " /docs/faq/ " | prepend: site.baseurl }}"  class="dropdown-menu__item__link">
                             <i class="fa fa-question" style="margin-right: 4px; margin-left: 2px;"></i>
                             &nbsp; Frequently Asked Questions</a>
-    
+
                         <a href="{{ " /docs/go-citation-policy/ " | prepend: site.baseurl }}"  class="dropdown-menu__item__link">
                             <i class="fa fa-pencil" style="margin-right: 4px; margin-left: 2px;"></i>
                             &nbsp; Citation and Terms</a>
-    
-                        <a href="http://help.geneontology.org" target="blank" title="Contact the GO helpdesk"   class="dropdown-menu__item__link">
+
+                        <a href="https://help.geneontology.org" target="blank" title="Contact the GO helpdesk"   class="dropdown-menu__item__link">
                             <i class="fa fa-comments-o"></i>
                             &nbsp; Contact us</a>
 
@@ -80,7 +80,7 @@
                 <a href="https://www.alliancegenome.org" target="blank" alt="Alliance of Genome Resources" >
                     <img src="/assets/ALLIANCE-logo-nobackground_foundingmember.png" alt="Alliance of Genome Resources" style="height: 60px; margin-right: 10px;"/>
                 </a>
-    
+
             </div>
 
         </div>
