--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -66,6 +66,11 @@
                         </a>
                     </li>
                     <li>
+                        <a rel="me" href="https://genomic.social/@go" target="blank" style="padding: 8px 3px; font-size: 15px;">    
+                            <i class="fa-brands fa-mastodon" aria-hidden="true"></i>
+                        </a>
+                    </li
+                    <li>
                         <a href="https://twitter.com/news4go" target="blank" style="padding: 8px 3px; font-size: 15px;">
                             <i class="fa fa-twitter" aria-hidden="true"></i>
                         </a>
