--- a/_layouts/goref.html
+++ b/_layouts/goref.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="container">
     <div class="u-margin-bottom-medium">
-        <a href="{{ '/gorefs.html' | relative_url }}">
+        <a href="{{ '/gorefs' | relative_url }}">
             <i class="fa fa-chevron-left" aria-hidden="true"></i>
             All GO REFs
         </a>
