--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -43,14 +43,18 @@
                         <a href="{{ " /docs/faq/ " | prepend: site.baseurl }}"  class="dropdown-menu__item__link">
                             <i class="fa fa-question" style="margin-right: 4px; margin-left: 2px;"></i>
                             &nbsp; Frequently Asked Questions</a>
+                        
+                        <a href="{{ " /docs/go-archives/ " | prepend: site.baseurl }}"  class="dropdown-menu__item__link">
+                            <i class="fa fa-archive" style="margin-right: 4px; margin-left: 2px;"></i>
+                            &nbsp; GO Archives & Deprecated Products/Formats</a>                        
 
                         <a href="{{ " /docs/go-citation-policy/ " | prepend: site.baseurl }}"  class="dropdown-menu__item__link">
                             <i class="fa fa-pencil" style="margin-right: 4px; margin-left: 2px;"></i>
-                            &nbsp; Citation and Terms</a>
+                            &nbsp; Citation Policy & Terms</a>
 
                         <a href="https://help.geneontology.org" target="blank" title="Contact the GO helpdesk"   class="dropdown-menu__item__link">
                             <i class="fa fa-comments-o"></i>
-                            &nbsp; Contact us</a>
+                            &nbsp; Contact Us</a>
 
                     </div>
                 </li>
