--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,12 @@
 
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/css/font-awesome.min.css" | prepend: site.baseurl }}">
+
+    <!-- font awesome -->
+    <link rel="stylesheet" href="{{ "/css/fontawesome/fontawesome.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/fontawesome/brands.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/fontawesome/regular.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/fontawesome/solid.min.css" | prepend: site.baseurl }}">
 
     <link rel="shortcut icon" href="{{ "/favicon.ico?1" | prepend: site.baseurl }}">
     {% seo %}
