--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,11 @@
 ---
 @charset "utf-8";
 
+$font-family-sans-serif: "Lato", sans-serif;
+$font-family-base: $font-family-sans-serif;
+$headings-font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$headings-font-weight: 400;
+
 @import
   {% if site.bootwatch %}
     "bootswatch/{{site.bootwatch | downcase}}/variables",
@@ -18,6 +23,10 @@
   "typeahead"
 ;
 
+.navbar {
+  font-family: $font-family-base;
+}
 
-
-
+.jumbotron p {
+  font-weight: 400;
+}
