Use Font Awesome v6 class names

--- a/_layouts/goref.html
+++ b/_layouts/goref.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
     <div class="u-margin-bottom-medium">
         <a href="{{ '/gorefs' | relative_url }}">
-            <i class="fa fa-chevron-left" aria-hidden="true"></i>
+            <i class="fa-solid fa-chevron-left" aria-hidden="true"></i>
             All GO REFs
         </a>
     </div>
