--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -37,23 +37,23 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="width: 280px; margin-bottom: 0px;">
 
                         <a href="/search.html" title="Search GO Documentation"   class="dropdown-menu__item__link">
-                            <i class="fa fa-search"></i>
+                            <i class="fa-solid fa-search"></i>
                             &nbsp; Search Documentation</a>
 
                         <a href="{{ " /docs/faq/ " | prepend: site.baseurl }}"  class="dropdown-menu__item__link">
-                            <i class="fa fa-question" style="margin-right: 4px; margin-left: 2px;"></i>
+                            <i class="fa-solid fa-question" style="margin-right: 4px; margin-left: 2px;"></i>
                             &nbsp; Frequently Asked Questions</a>
                         
                         <a href="{{ " /docs/go-archives/ " | prepend: site.baseurl }}"  class="dropdown-menu__item__link">
-                            <i class="fa fa-archive" style="margin-right: 4px; margin-left: 2px;"></i>
+                            <i class="fa-solid fa-archive" style="margin-right: 4px; margin-left: 2px;"></i>
                             &nbsp; GO Archives & Deprecated Products/Formats</a>                        
 
                         <a href="{{ " /docs/go-citation-policy/ " | prepend: site.baseurl }}"  class="dropdown-menu__item__link">
-                            <i class="fa fa-pencil" style="margin-right: 4px; margin-left: 2px;"></i>
+                            <i class="fa-solid fa-pencil" style="margin-right: 4px; margin-left: 2px;"></i>
                             &nbsp; Citation Policy & Terms</a>
 
                         <a href="https://help.geneontology.org" target="blank" title="Contact the GO helpdesk"   class="dropdown-menu__item__link">
-                            <i class="fa fa-comments-o"></i>
+                            <i class="fa-regular fa-comments"></i>
                             &nbsp; Contact Us</a>
 
                     </div>
@@ -71,17 +71,17 @@
                     </li>
                     <li>
                         <a href="https://github.com/geneontology" target="blank" style="padding: 8px 3px; font-size: 15px;">
-                            <i class="fa fa-github" aria-hidden="true"></i>
+                            <i class="fa-brands fa-github" aria-hidden="true"></i>
                         </a>
                     </li>
                     <li>
                         <a href="https://twitter.com/news4go" target="blank" style="padding: 8px 3px; font-size: 15px;">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <i class="fa-brands fa-twitter" aria-hidden="true"></i>
                         </a>
                     </li>
                     <li style="margin-right: 5px">
                         <a href="https://www.facebook.com/pages/Gene-Ontology/305908656519" target="blank" style="padding: 8px 3px; font-size: 15px;">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
                         </a>
                     </li>
                 </ul>
