Keep fontawesome CSS and fonts in sibling directories

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
     <!-- font awesome -->
-    <link rel="stylesheet" href="{{ "/css/fontawesome/fontawesome.min.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/css/fontawesome/brands.min.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/css/fontawesome/regular.min.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/css/fontawesome/solid.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/fontawesome.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/brands.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/regular.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/solid.min.css" | prepend: site.baseurl }}">
 
     <link rel="shortcut icon" href="{{ "/favicon.ico?1" | prepend: site.baseurl }}">
     {% seo %}
