--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -64,24 +64,24 @@
             <!-- SOCIAL LINKS -->
             <div class="navbar-right">
                 <ul class="nav navbar-nav">
-                    <li>
-                        <a rel="me" href="https://genomic.social/@go" target="blank" style="padding: 8px 3px; font-size: 15px;">    
-                            <i class="fa-brands fa-mastodon" aria-hidden="true"></i>
+                     <li>
+                        <a href="https://bsky.app/profile/geneontology.bsky.social" target="blank" style="padding: 8px 3px; font-size: 15px;">
+                            <i class="fa-brands fa-bluesky" aria-hidden="true"></i>
                         </a>
                     </li>
-                    <li>
+                     <li style="margin-right: 5px">
+                        <a href="https://www.facebook.com/pages/Gene-Ontology/305908656519" target="blank" style="padding: 8px 3px; font-size: 15px;">
+                            <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                     <li>
                         <a href="https://github.com/geneontology" target="blank" style="padding: 8px 3px; font-size: 15px;">
                             <i class="fa-brands fa-github" aria-hidden="true"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/news4go" target="blank" style="padding: 8px 3px; font-size: 15px;">
-                            <i class="fa-brands fa-twitter" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                    <li style="margin-right: 5px">
-                        <a href="https://www.facebook.com/pages/Gene-Ontology/305908656519" target="blank" style="padding: 8px 3px; font-size: 15px;">
-                            <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
+                        <a rel="me" href="https://genomic.social/@go" target="blank" style="padding: 8px 3px; font-size: 15px;">    
+                            <i class="fa-brands fa-mastodon" aria-hidden="true"></i>
                         </a>
                     </li>
                 </ul>
