--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -65,11 +65,11 @@
             <div class="navbar-right">
                 <ul class="nav navbar-nav">
                      <li>
-                        <a href="https://bsky.app/profile/geneontology.bsky.social" target="blank" style="padding: 8px 3px; font-size: 15px;">
+                        <a rel="me" href="https://bsky.app/profile/geneontology.bsky.social" target="blank" style="padding: 8px 3px; font-size: 15px;">
                             <i class="fa-brands fa-bluesky" aria-hidden="true"></i>
                         </a>
                     </li>
-                     <li style="margin-right: 5px">
+                     <li>
                         <a href="https://www.facebook.com/pages/Gene-Ontology/305908656519" target="blank" style="padding: 8px 3px; font-size: 15px;">
                             <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
                         </a>
@@ -79,8 +79,8 @@
                             <i class="fa-brands fa-github" aria-hidden="true"></i>
                         </a>
                     </li>
-                    <li>
-                        <a rel="me" href="https://genomic.social/@go" target="blank" style="padding: 8px 3px; font-size: 15px;">    
+                    <li style="margin-right: 5px">
+                        <a href="https://genomic.social/@go" target="blank" style="padding: 8px 3px; font-size: 15px;">    
                             <i class="fa-brands fa-mastodon" aria-hidden="true"></i>
                         </a>
                     </li>
