--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -69,14 +69,19 @@
                             <i class="fa-brands fa-bluesky" aria-hidden="true"></i>
                         </a>
                     </li>
-                     <li>
+                    <li>
                         <a href="https://www.facebook.com/pages/Gene-Ontology/305908656519" target="blank" style="padding: 8px 3px; font-size: 15px;">
                             <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
                         </a>
                     </li>
-                     <li>
+                    <li>
                         <a href="https://github.com/geneontology" target="blank" style="padding: 8px 3px; font-size: 15px;">
                             <i class="fa-brands fa-github" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/groups/2852688/" target="blank" style="padding: 8px 3px; font-size: 15px;">
+                            <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
                         </a>
                     </li>
                     <li style="margin-right: 5px">
