--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,4 +20,6 @@
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+
+    <script type="module" src="https://unpkg.com/@geneontology/web-components@0.2.0"></script>
 </head>
