--- a/css/main.scss
+++ b/css/main.scss
@@ -30,15 +30,13 @@ $headings-font-weight: 400;
 .jumbotron p {
   font-weight: 400;
 }
-.faq-gif-row{
-  display:flex;
-  gap:12px;
-  flex-wrap:nowrap;
-  align-items:flex-start;
-  justify-content:center;
+
+.faq-gif{
+  margin-top: 12px;
+  text-align: center;
 }
 
-.faq-gif-row img{
-  max-width:32%;
-  height:auto;
+.faq-gif img{
+  max-width: 100%;
+  height: auto;
 }
